Adjusted main method to permit also for folders with several vm files